--- a/index1.css
+++ b/index1.css
@@ -17,7 +17,7 @@ body {
 }
 
 .py-2 li:hover a, .sidebar li:hover a {
-    color: red;
+    color: black;
 }
 
 .py-2 li a {
@@ -51,8 +51,8 @@ body {
 
 .sidebar li a {
     display: block;
-    color: #8B0000;
     text-decoration: none;
+    color: #8B0000;
     font-weight: lighter;
     text-align: center;
 }
@@ -64,7 +64,6 @@ body {
     min-height: 500px;
     height: 200px;
     display: flex;
-    margin-top: 20%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: auto;
     text-align: center;
@@ -92,7 +91,7 @@ body {
     font-size: 18px;
 }
 
-.card button:hover {
+.card button:hover, .filterB:hover {
     opacity: 0.7;
 }
 
@@ -194,6 +193,7 @@ hr.solid {
 
 .footer span {
     color: white;
+    font-size: 1.2vw;
 }
 
 .footer #services li span {
@@ -243,3 +243,22 @@ hr.solid {
     cursor: pointer;
 }
 
+.questions li {
+    list-style: none;
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #E6E6FA;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+@media(min-width:500px){
+    .navbar {
+        display: none;
+    }
+}
+
+@media(max-width: 501px){
+    .filterBigScreen {
+        display: none;
+    }
+}
