--- a/index1.css
+++ b/index1.css
@@ -252,17 +252,19 @@ hr.solid {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-@media(min-width:500px){
+@media(min-width:768px){
     .navbar {
         display: none;
     }
 }
 
-@media(max-width: 501px){
-    .filterBigScreen {
+@media(max-width: 768px){
+    .filterBigScreen,.rBBigScreen {
         display: none;
     }
-    .productId, .productPrice, .productNo, .stateOrder {
+    th, .colNUmberProducts, .colDate, .colProductId, .colPrice, .editBut {
         display: none;
     }
 }
+
+
