--- a/index1.css
+++ b/index1.css
@@ -92,10 +92,6 @@ body {
     font-size: 18px;
 }
 
-.card button:hover, .filterB:hover {
-    opacity: 0.7;
-}
-
 .card img {
     width: 100%;
     height: auto;
@@ -227,6 +223,10 @@ hr.solid {
     padding: 20px;
     border: 1px solid #888;
     width: 100%;
+}
+
+button:hover {
+    opacity: 0.7;
 }
 
 /* The Close Button */
