--- a/index1.css
+++ b/index1.css
@@ -236,7 +236,7 @@ button:hover {
 }
 
 @media(max-width: 768px){
-    .filterBigScreen,.rBBigScreen {
+    .rBBigScreen {
         display: none;
     }
     th, .colNUmberProducts, .colDate, .colProductId, .colPrice, .editBut {
